--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background: url(img/utopia.jpg) no-repeat center center fixed;
+	background: url(image1.jpg) no-repeat center center fixed;
 	background-size: 100% 100%;
 }
 
